First attempt at making handlebars connections--most likely not functioning

--- a/html_drafts/team.html
+++ b/html_drafts/team.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,11 +10,11 @@
 
     <link rel="stylesheet" href="./style.css">
 
-    <title>Pokemon Team Builder - Your Team</title>
+    <title>Pokemon Team Builder - Dream Team</title>
 </head>
 
 <body>
-    <h1>Your Team</h1>
+    <h1>Your Dream Team</h1>
     <div class="container-fluid">
         <div class="row" id="padding2"></div>
         <div class="row">
@@ -28,12 +28,12 @@
                 <h4>Squirtle</h4>
             </div>
             <div class="col-6">
-                <p>Weight — 88 | Gravity — 0.180 | Walk Speed — 1.502 | Run Speed — 2.288 |<br> Initial Dash — 2.178 | Air Speed — 1.239 | Total Air Acceleration — 0.08</p>
-                <p>Weight — 88 | Gravity — 0.180 | Walk Speed — 1.502 | Run Speed — 2.288 |<br> Initial Dash — 2.178 | Air Speed — 1.239 | Total Air Acceleration — 0.08</p>
-                <p>Weight — 88 | Gravity — 0.180 | Walk Speed — 1.502 | Run Speed — 2.288 |<br> Initial Dash — 2.178 | Air Speed — 1.239 | Total Air Acceleration — 0.08</p>
-                <p>Weight — 88 | Gravity — 0.180 | Walk Speed — 1.502 | Run Speed — 2.288 |<br> Initial Dash — 2.178 | Air Speed — 1.239 | Total Air Acceleration — 0.08</p>
-                <p>Weight — 88 | Gravity — 0.180 | Walk Speed — 1.502 | Run Speed — 2.288 |<br> Initial Dash — 2.178 | Air Speed — 1.239 | Total Air Acceleration — 0.08</p>
-                <p>Weight — 88 | Gravity — 0.180 | Walk Speed — 1.502 | Run Speed — 2.288 |<br> Initial Dash — 2.178 | Air Speed — 1.239 | Total Air Acceleration — 0.08</p>
+                <p>Type(s): water, ground <br> Potential weaknesses: grass, ice <br> Potential strengths: rock, fire, ground, steel, poison, electric </p>
+                <p>Type(s): water, ground <br> Potential weaknesses: grass, ice <br> Potential strengths: rock, fire, ground, steel, poison, electric </p>
+                <p>Type(s): water, ground <br> Potential weaknesses: grass, ice <br> Potential strengths: rock, fire, ground, steel, poison, electric </p>
+                <p>Type(s): water, ground <br> Potential weaknesses: grass, ice <br> Potential strengths: rock, fire, ground, steel, poison, electric </p>
+                <p>Type(s): water, ground <br> Potential weaknesses: grass, ice <br> Potential strengths: rock, fire, ground, steel, poison, electric </p>
+                <p>Type(s): water, ground <br> Potential weaknesses: grass, ice <br> Potential strengths: rock, fire, ground, steel, poison, electric </p>
             </div>
             <div class="col-3"></div>
 
